--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,41 +7,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+
 
     <title>PokeAPI!</title>
 </head>
 
 <body>
-    <div class="container">
-        <h1>Ejemplo Practico!</h1>
-        <div class="input-group mb-3">
-            <input [(ngModel)]= "name" type="text" class="form-control" placeholder="pokemon name" aria-label="Recipient's username"
-                aria-describedby="button-addon2">
-            <button (click)= "datosPokemon()" class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
+    <div class="container mb-5 mt-5">
+
+        <div class="row g-3 mb-5">
+            <div class="col">
+                <input [(ngModel)]="name" type="text" class="form-control" placeholder="pokemon name"
+                    aria-label="Recipient's username" aria-describedby="button-addon2">
+            </div>
+            <div class="col">
+                <button (click)="datosPokemon()" class="btn btn-outline-secondary" type="button"
+                    id="button-addon2">Search</button>
+            </div>
         </div>
-        <div class="card" style="width: 18rem;">
-            <img src="{{imagen}}" class="card-img-top" alt="...">
+
+        <div class="card" style="width: 20rem;">
+            <!-- <img src="{{imagen}}" class="card-img-top" alt="imagenpk" style="height: auto;"> -->
+
             <div class="card-body">
-                <h5 class="card-title">Nombre: {{nombrePok}}</h5>
+                <div id="carouselExampleFade" class="carousel slide carousel-fade">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="{{imagen}}" class="d-block w-100" alt="img1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="{{imagen2}}" class="d-block w-100" alt="img2">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="{{imagen3}}" class="d-block w-100" alt="img3">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="{{imagen4}}" class="d-block w-100" alt="img3">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+
+                <h5 class="card-title">Name: {{nombrePok}}</h5>
+                <h5 class="card-title">Type: {{type}}</h5>
+                <h5 class="card-title">Base experience: {{exp}}</h5>
+                <h5 class="card-title">Stats: {{stats}}</h5>
             </div>
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
 
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
 </body>
 
 </html>
