--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,3 +1,12 @@
 .container{
-    align-items: -webkit-center;
+    text-align: -webkit-center;
+}
+
+.carousel-control-next,
+.carousel-control-prev /*, .carousel-indicators */ {
+    filter: invert(100%);
+}
+
+.card{
+    border: 0;
 }
