--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,76 +1,49 @@
-<!doctype html>
-<html lang="en">
+<div class="container mb-5 mt-5">
 
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <div class="card" style="width: 20rem;">
+        <img src="{{imagen}}" class="d-block w-100" alt="imagenpk" style="filter: brightness(0); height: 20rem;">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-
-
-
-    <title>PokeAPI!</title>
-</head>
-
-<body>
-    <div class="container mb-5 mt-5">
-
-        <div class="row g-3 mb-5">
-            <div class="col">
-                <input [(ngModel)]="name" type="text" class="form-control" placeholder="pokemon name"
-                    aria-label="Recipient's username" aria-describedby="button-addon2">
-            </div>
-            <div class="col">
-                <button (click)="datosPokemon()" class="btn btn-outline-secondary" type="button"
-                    id="button-addon2">Search</button>
-            </div>
-        </div>
-
-        <div class="card" style="width: 20rem;">
-            <!-- <img src="{{imagen}}" class="card-img-top" alt="imagenpk" style="height: auto;"> -->
-
-            <div class="card-body">
-                <div id="carouselExampleFade" class="carousel slide carousel-fade">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="{{imagen}}" class="d-block w-100" alt="img1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="{{imagen2}}" class="d-block w-100" alt="img2">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="{{imagen3}}" class="d-block w-100" alt="img3">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="{{imagen4}}" class="d-block w-100" alt="img3">
-                        </div>
+        <!-- <div class="card-body">
+            <div id="carouselExampleFade" class="carousel slide carousel-fade">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="{{imagen}}" class="d-block w-100" alt="img1" style="filter: brightness(0);">
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
+                    <div class="carousel-item">
+                        <img src="{{imagen2}}" class="d-block w-100" alt="img2" style="filter: brightness(0);">
+                    </div>
                 </div>
-
-                <h5 class="card-title">Name: {{nombrePok}}</h5>
-                <h5 class="card-title">Type: {{type}}</h5>
-                <h5 class="card-title">Base experience: {{exp}}</h5>
-                <h5 class="card-title">Stats: {{stats}}</h5>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true" style="color: black;"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
+
+            <h5 class="card-title" *ngIf="show">Name: {{nombrePok}}</h5>
+            <h5 class="card-title" *ngIf="show">Type: {{type}}</h5>
+            <h5 class="card-title" *ngIf="show">Base experience: {{exp}}</h5>
+            <h5 class="card-title" *ngIf="show">Stats: {{stats}}</h5>
+        </div> -->
+        <div class="card-body">
+            <h3>Quien es ese Pokemon? </h3>
+            <input type="text" class="form-control mb-3" name="name" [(ngModel)]="name">
+            <div class="row">
+                <div class="col">
+                    <button class="btn btn-danger mb-3" (click)="end()">Finalizar</button>
+                </div>
+                <div class="col">
+                    <button class="btn btn-success mb-3" (click)="mathchpk()">Validar</button>
+                </div>
+            </div>
+
+            <h5>Score: {{score}} / 100 </h5>
         </div>
+
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
-
-</body>
-
-</html>
+</div>
